feat: make variable filtering more convenient